[package]
name = "bounded-spsc-queue"
version = "0.4.0"
authors = ["Zachary Tong <zacharyjtong@gmail.com>"]
license = "Apache-2.0"
description = "A bounded SPSC queue"

repository = "https://github.com/polyfractal/bounded-spsc-queue"
homepage = "https://github.com/polyfractal/bounded-spsc-queue"
documentation = "https://polyfractal.github.io/bounded-spsc-queue/bounded_spsc_queue/"
keywords = ["data-structures"]
readme = "README.md"



[lib]
name = "bounded_spsc_queue"
doctest = false

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.2.3"
time = "0.1.39"
